--- a/public/assets/css/avatar.css
+++ b/public/assets/css/avatar.css
@@ -8,7 +8,7 @@ body
     background-position: center;
     border: #acacac 0.5pt solid;
     border-radius: 100%;
-    background:url(https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg);
+    background:url(https://t3.ftcdn.net/jpg/05/00/54/28/360_F_500542898_LpYSy4RGAi95aDim3TLtSgCNUxNlOlcM.jpg);
     background-color:#fff;
     background-position-y: 45%;
     background-size: cover;
